receba